update filter
